--- a/index3.html
+++ b/index3.html
@@ -71,7 +71,7 @@
 
         <div class="block">            
             <div class="block-img"><img src="icons_hw_module_4/owl.png" alt="owl"></div>
-            <div class="block-text"><p>HELLO, WORLD!</p></div>
+            <div class="block-text"><p>Hi, ANN!</p></div>
         </div>
 
         <div class="block">
