изменение в 3-ем диве

--- a/index3.html
+++ b/index3.html
@@ -62,6 +62,7 @@
     </style>
 </head>
 <body>
+hntns
 
     <div class="grid-conteiner">
         <div class="block">
@@ -76,7 +77,7 @@
 
         <div class="block">
             <div class="block-img"><img src="icons_hw_module_4/owl.png" alt="owl"></div>
-            <div class="block-text"><p>HELLO, WORLD!</p></div>
+            <div class="block-text"><p>HELLO, WORLD! HELLO, WORLD!</p></div>
         </div>
     </div>
 
